Fix date formatting for GH pages

--- a/_includes/collection-calendar.html
+++ b/_includes/collection-calendar.html
@@ -22,7 +22,7 @@
 
                 <ol class="list-unstyled">
                     {% for item in month.items %}
-                        <li class="{% if item.isChangedCollection %}text-danger fw-bold{% endif %}">{{ item.collectionDate | date: "%A %-d %B" }}</li>
+                        <li class="{% if item.isChangedCollection %}text-danger fw-bold{% endif %}">{{ item.collectionDate | date: "%A" }} {{ item.collectionDate | date: "%-d %B" }}</li>
                     {% endfor %}
                 </ol>
             </div>
@@ -36,7 +36,7 @@
 
                 {% for item in month.items %}
                     <div class="p-3 mb-2 bg-{{ item.type }} {% if item.isChangedCollection %}border border-3 border-danger{% endif %}">
-                        <span class="fw-bold">{{ item.collectionDate | date: "%A %-d %B" }} - {{ item.name }}</span>
+                        <span class="fw-bold">{{ item.collectionDate | date: "%A" }} {{ item.collectionDate | date: "%-d %B" }} - {{ item.name }}</span>
                     </div>
                 {% endfor %}
             </div>
