--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,15 @@
+{%- if page.url == '/' -%}
+  {% assign isHome = true %}
+{% else %}
+  {% assign isHome = false %}
+{%- endif -%}
 <!DOCTYPE html>
 <html lang="{{ site.lang }}">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% seo title=false %}
-    <title>{% if page.url == '/' %}{{ site.title }}{% else %}{{ page.title }} - {{ site.title }}{% endif %}</title>
+    <title>{% if isHome %}{{ site.title }}{% else %}{{ page.title }} - {{ site.title }}{% endif %}</title>
     <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
     <link rel="shortcut icon" type="image/png" href="{{ "/favicon.png" | relative_url }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,6 +50,11 @@
 
       <main id="content" class="mt-3">
         <div class="container">
+
+          {% if isHome != true %}
+            {% include breadcrumbs.html %}
+          {% endif %}
+
           {{ content }}
         </div>
       </main>
