--- a/_includes/collection-calendar.html
+++ b/_includes/collection-calendar.html
@@ -8,9 +8,24 @@
 
 {% assign jsonData = site.data.icaljs[dataKey].collectionDates %}
 
+{% assign icalUrl = "/ical/" | append: dataKey | append: ".ics" | absolute_url %}
+
 <h2>{{ page.title }}</h2>
 
 <p>You can view the collection dates for the {{ page.title }} schedule below.</p>
+
+<div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4">
+    <a href="{{ icalUrl }}" class="btn btn-primary me-md-2">Download calendar</a>
+    <a href="{{ '/json/' | append: dataKey }}.json" class="btn btn-success">JSON data</a>
+</div>
+
+<p>To subscribe to this calendar use the following iCal URL:</p>
+
+<div class="bg-light p-3 mb-4 border border-1">
+    <code>
+        {{ icalUrl }}
+    </code>
+</div>
 
 {% assign months = jsonData | group_by_exp: "collection", "collection.collectionDate | date: '%B %Y'" %}
 
