Change JSON button label

--- a/_includes/collection-calendar.html
+++ b/_includes/collection-calendar.html
@@ -16,7 +16,7 @@
 
 <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4">
     <a href="{{ icalUrl }}" class="btn btn-primary me-md-2">Download calendar</a>
-    <a href="{{ '/json/' | append: dataKey }}.json" class="btn btn-success">JSON data</a>
+    <a href="{{ '/json/' | append: dataKey }}.json" class="btn btn-success">View as JSON</a>
 </div>
 
 <p>To subscribe to this calendar use the following iCal URL:</p>
