--- a/_includes/collection-schedules.html
+++ b/_includes/collection-schedules.html
@@ -24,7 +24,7 @@
                             </div>
                             <div class="d-grid gap-2 d-block d-lg-flex">
                                 <button data-schedule-title="iCal URL {{ scheduleTitle }}" id="{{ subscribeId }}" type="button" class="btn btn-secondary">Copy iCal URL</button>
-                                <a href="{{ schedule.json | absolute_url }}" class="btn btn-success" target="_blank">JSON API</a>
+                                <a href="{{ schedule.json | absolute_url }}" class="btn btn-success" target="_blank">View as JSON</a>
                             </div>
 
                             <script>
