--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
         </a>
     {% endif %}
 
-    <h1 class="mb-3">Refuse/Waste, Recycling, Glass and Garden bin schedules</h1>
+    <h1 class="my-3">Refuse/Waste, Recycling, Glass and Garden bin schedules</h1>
 
     <p><strong>Unofficial</strong> calendars for the refuse collections covering all schedules within the Gedling, Nottingham district area. Provided in HTML, iCalendar and JSON formats.</p>
     <p class="mb-0">The calendars are generated from the official PDF calendar format provided by Gedling Borough Council.</p>
