--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -37,6 +37,7 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 @import "bootstrap/scss/transitions";
 @import "bootstrap/scss/toasts";
 @import "bootstrap/scss/breadcrumb";
+@import "bootstrap/scss/forms";
 @import "bootstrap/scss/helpers";
 @import "bootstrap/scss/utilities/api";
 
