--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
-<footer class="border-top bg-light py-4 text-center container-fluid mt-3">
+<footer class="border-top border-bottom bg-light py-4 text-center container-fluid mt-3">
     <p class="mb-0">The calendar data provided is unofficial and not officially published by Gedling Borough Council. You can read more <a href="https://github.com/jamesmacwhite/gedling-borough-council-bin-calendars">about the repository</a> and publication of these calendars.</p>
 </footer>
