Adjust logo hyperlink logic

--- a/_includes/header-minimal.html
+++ b/_includes/header-minimal.html
@@ -1,5 +1,7 @@
 <header class="bg-black text-white py-2">
     <div class="container">
-        {% include logo.html width="200" %}
+        <a href="/">
+            {% include logo.html width="200" %}
+        </a>
     </div>
 </header>
