Use download attribute

--- a/_includes/collection-calendar.html
+++ b/_includes/collection-calendar.html
@@ -15,7 +15,7 @@
 <p>You can view the collection dates for the {{ page.title }} schedule below.</p>
 
 <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4">
-    <a href="{{ icalUrl }}" class="btn btn-primary me-md-2">Download calendar</a>
+    <a href="{{ icalUrl }}" class="btn btn-primary me-md-2" download>Download calendar</a>
     <a href="{{ '/json/' | append: dataKey }}.json" class="btn btn-success">View as JSON</a>
 </div>
 
