Add collection note to garden collection schedules

--- a/_includes/collection-calendar.html
+++ b/_includes/collection-calendar.html
@@ -66,6 +66,8 @@
             </div>
         {% endfor %}
     </div>
+
+    <p class="my-2 fw-bold text-danger">There are no collections in January and February.</p>
 {% else %}
     <div class="row row-cols-1 row-cols-sm-2 g-4">
         {% for month in months %}
