Adjust casing for calendary key heading

--- a/_includes/collection-calendar.html
+++ b/_includes/collection-calendar.html
@@ -10,40 +10,42 @@
 
 {% assign icalUrl = "/ical/" | append: dataKey | append: ".ics" | absolute_url %}
 
-<h2>{{ page.title }}</h2>
+<div class="border-bottom border-1 mb-4">
+    <h2>{{ page.title }}</h2>
 
-<p>You can view the collection dates for the {{ page.title }} schedule below.</p>
+    <p>You can view the collection dates for the {{ page.title }} schedule below.</p>
 
-<div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4">
-    <a href="{{ icalUrl }}" class="btn btn-primary me-md-2" download>Download calendar</a>
-    <a href="{{ '/json/' | append: dataKey }}.json" class="btn btn-success">View as JSON</a>
+    <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4">
+        <a href="{{ icalUrl }}" class="btn btn-primary me-md-2" download>Download calendar</a>
+        <a href="{{ '/json/' | append: dataKey }}.json" class="btn btn-success">View as JSON</a>
+    </div>
+
+    <p>To subscribe to this calendar use the following iCal URL:</p>
+
+    <div class="bg-light p-3 mb-3 border border-1">
+        <label for="ical-url" class="visually-hidden">iCal URL</label>
+        <input class="form-control w-100" type="text" id="ical-url" value="{{ icalUrl }}" readonly>
+    </div>
+
+    <button type="button" class="btn btn-secondary mb-4" onclick="copyToClipboard()">Copy to clipboard</button>
+
+    <script>
+        function copyToClipboard() {
+            var icalUrl = document.getElementById("ical-url");
+            var icalUrlOriginalValue = icalUrl.value;
+
+            icalUrl.select();
+            icalUrl.setSelectionRange(0, 99999);
+            navigator.clipboard.writeText(icalUrl.value);
+
+            icalUrl.setAttribute('value', 'iCal URL has been copied to the clipboard!');
+
+            setTimeout(function() {
+                icalUrl.setAttribute('value', icalUrlOriginalValue)
+            }, 3000);
+        }
+    </script>
 </div>
-
-<p>To subscribe to this calendar use the following iCal URL:</p>
-
-<div class="bg-light p-3 mb-3 border border-1">
-    <label for="ical-url" class="visually-hidden">iCal URL</label>
-    <input class="form-control w-100" type="text" id="ical-url" value="{{ icalUrl }}" readonly>
-</div>
-
-<button type="button" class="btn btn-secondary mb-4" onclick="copyToClipboard()">Copy to clipboard</button>
-
-<script>
-    function copyToClipboard() {
-        var icalUrl = document.getElementById("ical-url");
-        var icalUrlOriginalValue = icalUrl.value;
-
-        icalUrl.select();
-        icalUrl.setSelectionRange(0, 99999);
-        navigator.clipboard.writeText(icalUrl.value);
-
-        icalUrl.setAttribute('value', 'iCal URL has been copied to the clipboard!');
-
-        setTimeout(function() {
-            icalUrl.setAttribute('value', icalUrlOriginalValue)
-        }, 3000);
-    }
-</script>
 
 {% assign months = jsonData | group_by_exp: "collection", "collection.collectionDate | date: '%B %Y'" %}
 
@@ -67,7 +69,7 @@
         {% endfor %}
     </div>
 
-    <p class="my-2 fw-bold text-danger">There are no collections in January and February.</p>
+    <p class="mt-2 mb-4 fw-bold text-danger">There are no collections in January and February.</p>
 
 {% else %}
     <div class="row row-cols-1 row-cols-sm-2 g-4">
@@ -85,6 +87,8 @@
     </div>
 
     <div class="refuse-collection-key my-4" aria-hidden="true">
+        <h4 class="text-muted h6 fw-bold text-uppercase">Calendar key</h4>
+
         <div class="d-md-flex">
             <div class="me-md-3">
                 <i class="bi bi-square-fill text-black-bin"></i>
