--- a/_includes/collection-calendar.html
+++ b/_includes/collection-calendar.html
@@ -14,20 +14,20 @@
 
     <p>You can view the collection dates for the {{ page.title }} schedule below.</p>
 
-    <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4">
-        <a href="{{ icalUrl }}" class="btn btn-primary me-md-2" download>Download calendar</a>
-        <a href="{{ '/json/' | append: dataKey }}.json" class="btn btn-success">View as JSON</a>
-    </div>
-
-    <p>To subscribe to this calendar use the following iCal URL:</p>
-
     <div class="bg-light p-3 mb-3 border border-1">
+        <p>To subscribe to this calendar use the following iCal URL:</p>
+
         <label for="ical-url" class="visually-hidden">iCal URL</label>
         <input class="form-control w-100" type="text" id="ical-url" value="{{ icalUrl }}" readonly>
-        <p id="ical-url-copied" class="d-none mb-0">
+        <p id="ical-url-copied" class="d-none mt-1 mb-0">
             <span class="text-success">iCal URL has been copied to the clipboard!</span>
         </p>
-        <button type="button" class="btn btn-secondary mt-2" onclick="copyToClipboard()">Copy iCal URL</button>
+
+        <div class="d-grid d-md-flex gap-1 mt-2">
+            <button type="button" class="btn btn-secondary" onclick="copyToClipboard()">Copy iCal URL</button>
+            <a href="{{ icalUrl }}" class="btn btn-gedling-red" download>Download calendar</a>
+            <a href="{{ '/json/' | append: dataKey }}.json" class="btn btn-success">View as JSON</a>
+        </div>
     </div>
 
     <script>
