--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -7,7 +7,7 @@
         {% for crumb in crumbs offset: 1 %}
             {% if forloop.last %}
                 <li class="breadcrumb-item active" aria-current="page">
-                    {{ page.title }}
+                    {{ page.breadcrumb | default: page.title }}
                 </li>
             {% else %}
                 <li class="breadcrumb-item">
